keeping up with the latest Turbine changes Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.29 2001/06/11 00:13:32 jon Exp $
+# $Id: TurbineResources.properties,v 1.30 2001/06/14 18:43:27 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -10,87 +10,34 @@
 
 # -------------------------------------------------------------------
 # 
-#  L O G S
+#  L O G G I N G
 #
 # -------------------------------------------------------------------
-# This is the configuration for the logging system. In most cases
-# you don't need to modify anything. However, if you wish to add more
-# facilities or modify the existing settings, then you can do so.
-#
-# destination.file: A path relative to the web app root
+# We use Log4J for all Turbine logging and we embed the log4j
+# properties within our application configuration.
 # -------------------------------------------------------------------
 
-services.LoggingService.facilities=system,debug,security,sql
-services.LoggingService.default=system
-services.LoggingService.loggingConfig=org.apache.turbine.services.logging.PropertiesLoggingConfig
+# This first category is required and the category
+# must be named 'default'. This is used for all logging
+# where an explicit category is not specified.
 
-# A facility for system logging.
-services.LoggingService.system.destination.file=/logs/turbine.log
-services.LoggingService.system.className=org.apache.turbine.services.logging.FileLogger
-services.LoggingService.system.level=INFO
+log4j.category.default = INFO, default
+log4j.appender.default = org.apache.log4j.FileAppender
+log4j.appender.default.file = ${webapp}/logs/turbine.log
+log4j.appender.default.layout = org.apache.log4j.PatternLayout
+log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.default.append = false
 
-# A facitly for the scheduler service
-# To disable started/stopped messages set the level to ERROR
-services.LoggingService.scheduler.destitnation.file=/logs/turbine.log
-services.LoggingService.scheduler.className=org.apache.turbine.services.logging.FileLogger
-services.LoggingService.scheduler.level=INFO
+# This category is used in the BasePeer class. All
+# SQL generated will be logged if the category
+# priority is set to DEBUG
 
-
-# A facility for debugging applications. Messages will go both
-# to the log file and the server console.
-services.LoggingService.debug.destination.file=/logs/turbine.log
-services.LoggingService.debug.destination.console=true
-services.LoggingService.debug.className=org.apache.turbine.services.logging.FileLogger
-services.LoggingService.debug.level=INFO
-
-# A facility for SQL query logging
-# To enable SQL query logging, set the level to DEBUG
-services.LoggingService.sql.destination.file=/logs/turbine.log
-services.LoggingService.sql.destination.console=true
-services.LoggingService.sql.className=org.apache.turbine.services.logging.FileLogger
-services.LoggingService.sql.level=ERROR
-
-# A facility for security audit. NOTE! As of 23 Jan 2001
-# Turbine does not have any standard security auditing
-# functionality. It's up to your application.
-services.LoggingService.security.destination.file=/logs/turbine.log
-services.LoggingService.security.className=org.apache.turbine.services.logging.FileLogger
-services.LoggingService.security.level=INFO
-
-# An example configuration for automatic log rotation using Log4Java
-# This will keep the log file size under 1MB and save up to 5 backup copies
-services.LoggingService.rotation.destination.file=/logs/turbine.log
-services.LoggingService.rotation.file.size=1048576
-services.LoggingService.rotation.file.backups=5
-services.LoggingService.rotation.className=org.apache.turbine.services.logging.Log4JavaLogger
-services.LoggingService.rotation.level=INFO
-
-# An example configuration for using *NIX syslogd with Log4Java
-services.LoggingService.syslog.destination.syslogd.host=my.syslog.server.com
-services.LoggingService.syslog.destination.syslogd.facility=LOG_DAEMON
-services.LoggingService.syslog.className=org.apache.turbine.services.logging.Log4JavaLogger
-services.LoggingService.syslog.level=INFO
-
-# An example configuration for using remote Log4Java server
-services.LoggingService.remote.destination.remote.host=my.remote.server.com
-services.LoggingService.remote.destination.remote.port=1099
-services.LoggingService.remote.className=org.apache.turbine.services.logging.Log4JavaLogger
-services.LoggingService.remote.level=INFO
-
-# An example configuration for sending error reports as email with Log4Java
-# notes: 
-# * uses 'mail.server' as SMTP server to send mail through
-# * log4j will send the email when an ERROR is logged, with
-#   'buffer.size' previous (non-ERROR) logs included in the email
-# * configured to log to a file as well otherwise stacktraces are lost
-services.LoggingService.email.destination.file=/logs/turbine.log
-services.LoggingService.email.destination.email.from=root@localhost
-services.LoggingService.email.destination.email.to=root@localhost
-services.LoggingService.email.destination.email.subject=Turbine Error Report
-services.LoggingService.email.destination.email.buffer.size=512
-services.LoggingService.email.className=org.apache.turbine.services.logging.Log4JavaLogger
-services.LoggingService.email.level=INFO
-
+log4j.category.sql = DEBUG, sql
+log4j.appender.sql = org.apache.log4j.FileAppender
+log4j.appender.sql.file = ${webapp}/logs/sql.log
+log4j.appender.sql.layout = org.apache.log4j.PatternLayout
+log4j.appender.sql.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.sql.append = false
 
 # -------------------------------------------------------------------
 # 
@@ -160,64 +107,6 @@ module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 
 # -------------------------------------------------------------------
 # 
-#  D A T A B A S E  S E T T I N G S
-#
-# -------------------------------------------------------------------
-# These are your database settings.  Look in the
-# org.apache.turbine.util.db.pool.* packages for more information.
-# The default driver for Turbine is for MySQL.
-#
-# The parameters to connect to the default database.  You MUST
-# configure these properly.
-# -------------------------------------------------------------------
-
-database.default.driver=org.gjt.mm.mysql.Driver
-#database.defauult.url=jdbc:mysql://mysql.whichever.com:3306/scarab
-database.default.url=jdbc:mysql://localhost:3306/scarab
-database.default.username=
-database.default.password=
-
-# The number of database connections to cache per ConnectionPool
-# instance (specified per database).
-database.default.maxConnections=30
-
-# The amount of time (in milliseconds) that database connections will be
-# cached (specified per database).
-#
-# Default: one hour = 60 * 60 * 1000
-
-database.default.expiryTime=3600000
-
-# The amount of time (in milliseconds) a connection request will have to wait
-# before a time out occurs and an error is thrown.
-#
-# Default: ten seconds = 10 * 1000
-
-database.connectionWaitTimeout=10000
-
-# The interval (in milliseconds) between which the PoolBrokerService logs 
-# the status of it's ConnectionPools.
-#
-# Default: No logging = 0 = 0 * 1000
-
-database.logInterval=0
-
-# These are the supported JDBC drivers and their associated Turbine
-# adaptor.  These properties are used by the DBFactory.  You can add
-# all the drivers you want here.
-
-database.adaptor=DBMM
-database.adaptor.DBMM=org.gjt.mm.mysql.Driver
-
-#
-# Determines if the quantity column of the IDBroker's id_table should
-# be increased automatically if requests for ids reaches a high
-# volume.
-
-database.idbroker.cleverquantity=true
-
-# -------------------------------------------------------------------
-# 
 #  F R A M E W O R K  S E T T I N G S
 #
 # -------------------------------------------------------------------
@@ -262,13 +151,13 @@ screen.login=Login
 #
 # Default: /Error.wm
 
-#template.error=Error.vm
+template.error=Error.vm
 
 # This is the default error screen.
 #
 # Default: Error
 
-screen.error=Error
+screen.error=VelocityErrorScreen
 
 # This is the screen that is displayed when the user's web page is in
 # an invalid state.
@@ -408,7 +297,6 @@ use.ssl=true
 # that depend on other services during initialization.
 # -------------------------------------------------------------------
 services.ResourceService.classname=org.apache.turbine.services.resources.TurbineResourceService
-services.LoggingService.classname=org.apache.turbine.services.logging.TurbineLoggingService
 services.FactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
 services.PoolService.classname=org.apache.turbine.services.pool.TurbinePoolService
 services.RunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
@@ -422,8 +310,7 @@ services.SchedulerService.classname=org.apache.turbine.services.schedule.Turbine
 services.UniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.UploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
 services.SecurityService.classname=org.tigris.scarab.services.ScarabDBSecurityService
-services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolBrokerService
-services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
+services.DatabaseService.classname=org.apache.turbine.services.db.TurbineDatabaseService
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 services.TemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
@@ -431,6 +318,63 @@ services.TemplateService.classname=org.apache.turbine.services.template.TurbineT
 # Turn on the appropriate template service.
 services.VelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
 
+# -------------------------------------------------------------------
+# 
+#  D A T A B A S E  S E R V I C E
+#
+# -------------------------------------------------------------------
+# These are your database settings.  Look in the
+# org.apache.turbine.util.db.pool.* packages for more information.
+# The default driver for Turbine is for MySQL.
+#
+# The parameters to connect to the default database.  You MUST
+# configure these properly.
+# -------------------------------------------------------------------
+services.DatabaseService.database.default=default
+
+services.DatabaseService.database.default.driver=org.gjt.mm.mysql.Driver
+services.DatabaseService.database.default.url=jdbc:mysql://localhost:3306/scarab
+services.DatabaseService.database.default.username=
+services.DatabaseService.database.default.password=
+
+# The number of database connections to cache per ConnectionPool
+# instance (specified per database).
+
+services.DatabaseService.database.default.maxConnections=30
+
+# The amount of time (in milliseconds) that database connections will be
+# cached (specified per database).
+#
+# Default: one hour = 60 * 60 * 1000
+
+services.DatabaseService.database.default.expiryTime=3600000
+
+# The amount of time (in milliseconds) a connection request will have to wait
+# before a time out occurs and an error is thrown.
+#
+# Default: ten seconds = 10 * 1000
+
+services.DatabaseService.database.connectionWaitTimeout=10000
+
+# The interval (in milliseconds) between which the PoolBrokerService logs 
+# the status of it's ConnectionPools.
+#
+# Default: No logging = 0 = 0 * 1000
+
+services.DatabaseService.database.logInterval=0
+
+# These are the supported JDBC drivers and their associated Turbine
+# adaptor.  These properties are used by the DBFactory.  You can add
+# all the drivers you want here.
+
+services.DatabaseService.database.adaptor=DBMM
+services.DatabaseService.database.adaptor.DBMM=org.gjt.mm.mysql.Driver
+
+# Determines if the quantity column of the IDBroker's id_table should
+# be increased automatically if requests for ids reaches a high
+# volume.
+
+services.DatabaseService.database.idbroker.cleverquantity=true
 
 # -------------------------------------------------------------------
 #
@@ -446,6 +390,16 @@ services.RunDataService.default.run.data=org.apache.turbine.services.rundata.Def
 services.RunDataService.default.parameter.parser=org.apache.turbine.util.parser.DefaultParameterParser
 services.RunDataService.default.cookie.parser=org.apache.turbine.util.parser.DefaultCookieParser
 
+# -------------------------------------------------------------------
+#
+#  C A C H E   S E R V I C E
+#
+# -------------------------------------------------------------------
+
+# Interval at which the cache will be checked. The default is
+# 5000ms or 5 seconds.
+
+services.GlobalCacheService.cacheCheckFrequency = 5000
 
 # -------------------------------------------------------------------
 # 
@@ -540,14 +494,18 @@ services.PullService.tools.per.request.refresh=true
 #
 # Defaults: none
 
-tool.request.link=org.tigris.scarab.util.ScarabLink
-tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
-tool.request.content=org.apache.turbine.util.ContentURI
-tool.request.om=org.apache.turbine.om.OMTool
-tool.request.intake=org.apache.turbine.services.intake.IntakeTool
-tool.request.flux=org.apache.turbine.flux.tools.FluxTool
+services.PullService.tool.request.link=org.tigris.scarab.util.ScarabLink
+services.PullService.tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
+services.PullService.tool.request.content=org.apache.turbine.util.ContentURI
+services.PullService.tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
-tool.global.ui=org.apache.turbine.services.pull.util.UIManager
+# These are intake tools.
+services.PullService.tool.request.om=org.apache.turbine.om.OMTool
+services.PullService.tool.request.intake=org.apache.turbine.services.intake.IntakeTool
+
+services.PullService.tool.global.ui=org.apache.turbine.services.pull.util.UIManager
+
+services.PullService.earlyInit = true
 
 # The UI Manager will allow you to skin your Turbine
 # application using simple properties files that are
@@ -578,7 +536,7 @@ services.VelocityService.default.error.screen = VelocityErrorScreen
 services.VelocityService.default.layout.template = /default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
-#services.VelocityService.template.encoding=
+#services.VelocityService.input.encoding=UTF-8
 services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros.vm
 
 services.VelocityService.resource.loader = file
@@ -594,6 +552,7 @@ services.VelocityService.classpath.resource.loader.class = org.apache.velocity.r
 
 services.VelocityService.velocimacro.permissions.allow.inline.to.replace.global=true
 
+services.VelocityService.earlyInit = true
 
 # -------------------------------------------------------------------
 # 
@@ -601,10 +560,10 @@ services.VelocityService.velocimacro.permissions.allow.inline.to.replace.global=
 #
 # -------------------------------------------------------------------
 
-# Wheter the files should be automaticaly picked up by
+# Whether the files should be automatically picked up by
 # ParameterParser.
 
-services.UploadService.automatic=false
+services.UploadService.automatic=true
 
 #
 # The directory where files will be temporarily stored.
@@ -620,7 +579,7 @@ services.UploadService.size.max=1048576
 # The maximum size of a request that will have it's elements cached in
 # memory by TurbineUploadService class.
 #
-services.UploadService.size.threshold=10240
+services.UploadService.size.threshold=0
 
 # -------------------------------------------------------------------
 # 
@@ -631,36 +590,36 @@ services.UploadService.size.threshold=10240
 # Default ResourceBundle and language/country codes used by the
 # TurbineLocalizationService.
 #
-locale.default.bundle=MyBundle
-locale.default.language=en
-locale.default.country=US
+services.LocalizationService.locale.default.bundle=MyBundle
+services.LocalizationService.locale.default.language=en
+services.LocalizationService.locale.default.country=US
 
 #
 # This will set the charset= portion of the ContentType: header.
 # Leave commented out unless you want to return stuff as a different
 # charset.
 #
-# locale.default.charset=
+# services.LocalizationService.locale.default.charset=
 
 # -------------------------------------------------------------------
-#
+# 
 #  M I M E T Y P E  S E R V I C E
 #
 # -------------------------------------------------------------------
 
-# This property specifies a file containing mappings between MIME
+# This property specifies a file containing mappings between MIME 
 # content types and the corresponding file name extensions. The
-# service itself contains a hardcoded set of most common mappings.
-# The file must use the same syntax as the mime.types file of
-# the Apache Server, i.e.
+# service itself contains a hardcoded set of most common mappings. 
+# The file must use the same syntax as the mime.types file of 
+# the Apache Server, i.e. 
 # <mimetype> <ext1> <ext2>...
 #
 #services.MimeTypeService.mime.types=/WEB-INF/conf/mime.types
 
-# This property specifies a file containing mappings between locales
-# and the corresponding character encodings. The service itself
-# contains a hardcoded set of most common mappings.
-# The file should use the Java property file syntax, i.e.
+# This property specifies a file containing mappings between locales 
+# and the corresponding character encodings. The service itself 
+# contains a hardcoded set of most common mappings. 
+# The file should use the Java property file syntax, i.e. 
 # <lang_country_variant>=<charset>
 #
 #services.MimeTypeService.charsets=/WEB-INF/conf/charset.properties
@@ -676,8 +635,7 @@ locale.default.country=US
 #
 # Default = false
 #
-scheduler.enabled=false
-
+services.SchedulerService.scheduler.enabled=false
 
 # -------------------------------------------------------------------
 # 
@@ -749,7 +707,6 @@ services.SecurityService.secure.passwords.algorithm=SHA
 # xml for XmlRpc functionality.
 #
 # Default: org.apache.xerces.parsers.SAXParser
-#
 
 services.XmlRpcService.parser=org.apache.xerces.parsers.SAXParser
 
@@ -774,7 +731,7 @@ services.XmlRpcService.port=12345
 #
 # Default: no classes are specified by default
 
-#services.XmlRpcService.handler.default=java.util.Hashtable
+#services.XmlRpcService.handler.$default=java.util.Hashtable
 #services.XmlRpcService.handler.stringhandler=java.lang.String
 
 # The following properties allow the transfer of data between
@@ -788,6 +745,8 @@ services.XmlRpcService.handler.file = org.apache.turbine.services.xmlrpc.util.Fi
 services.XmlRpcService.paranoid = false
 services.XmlRpcService.acceptClient = 192.168.1.*
 services.XmlRpcService.denyClient = 
+
+services.XmlRpcService.earlyInit = true
 
 # -------------------------------------------------------------------
 # 
