--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -3,9 +3,9 @@ scarab.email.register.fromAddress=help@scarab.tigris.org
 scarab.email.register.subject=Account Confirmation
 scarab.email.register.template=email/Confirmation.vm
 
-tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
-tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
-tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurity
+services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
+services.PullService.tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
+services.PullService.tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurity
 
 # This name will be used to distinguish specific scarab application
 # from other instances that it may interact with (in the future).
