Set the default CategoryFactory to JBossCategoryFactory Update the layout pattern to only use the rightmost portion of the category name.

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -1,5 +1,9 @@
-# A log4j properties file suitable for replacing the
-# default JBoss ConsoleLogging & FileLogging mbeans.
+# The standard log4j properties for the default
+# JBoss server config. This creates a server.log appender
+# and a console appender.
+
+# Set the JBossCategoryFactory as the default CategoryFactory
+log4j.categoryFactory=org.jboss.logging.log4j.JBossCategory$JBossCategoryFactory
 
 log4j.rootCategory=DEBUG, Default, Console
 
@@ -7,15 +11,18 @@ log4j.rootCategory=DEBUG, Default, Console
 log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
-# Use the default JBoss format
-log4j.appender.Default.layout.ConversionPattern=[%c] %m%n
+# Format is [Category] msg\n
+log4j.appender.Default.layout.ConversionPattern=[%c{1}] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
-#Example of turning off logging for a category. Uncomment to turn off.
-#log4j.category.DefaultDS=FATAL
 
 ### The console appender
 log4j.appender.Console=org.jboss.logging.log4j.ConsoleAppender
 log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=[%c] %m%n
+log4j.appender.Console.layout.ConversionPattern=[%c{1}] %m%n
+
+# Example of increasing the priority threshold for the DefaultDS category
+#log4j.category.DefaultDS=FATAL
+# Example of only showing INFO msgs for any categories under org.jboss.util
+#log4j.category.org.jboss.util=INFO
