- Added the protected access getFQCN() method to Category class. The new method is used   extensively. Subclasses of category should override this method.
- Modified the MyCategory example to be easier to understand.

- Changed indentation of VersionHelper*



PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -7,6 +7,7 @@ JSOURCES:=SortAlgo.java Sort.java Trivial.java NumberCruncher.java\
 	MyPatternParser.java\
 	MyPatternLayout.java\
 	MyCategory.java\
+	MyCategoryTest.java\
 	MyCategoryFactory.java\
 
 
