--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -27,7 +27,7 @@ JSOURCES:= Shallow.java\
  SocketAppenderTest.java\
  PrintProperties.java\
  CustomCategoryTest.java\
-
+ FQCNTest.java\
 
 ifdef $(ISJDK1)
   JSOURCES:=$(JSOURCES)  UnitTestOR.java
