--- a/src/java/org/apache/log4j/helpers/Makefile
+++ b/src/java/org/apache/log4j/helpers/Makefile
@@ -20,7 +20,9 @@ JSOURCES:=LogLog.java\
 	BoundedFIFO.java\
 	FileWatchdog.java\
 	Loader.java\
-
+        VersionHelper.java\
+        VersionHelper11.java\
+        VersionHelper20.java\
 
 
 SUBDIRS := 
