Issue entry works.  The Wizard2.vm (2.1.1) still needs some work in that the column sort is not done and voting is not implemented awaiting comments.  I do not know how useful the sorting capability is in 2.1.1, but it will be useful in larger search results, so it will be implemented next.
modified the properties for file upload to match column size and provide some efficiency.

Added methods to ReportIssue to handle some of the extra buttons in the latest ia/ui.
Also modified so that the parameters are not getting passed along during the
wizard, but are saved with the issue that is being entered, The objects are
already consuming memory, the values should not be much more.

It appears some Attributes and Values are going to get hardcoded into the ui,
so I added some constants to handle the ones that have appeared so far.


PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.30 2001/06/14 18:43:27 jon Exp $
+# $Id: TurbineResources.properties,v 1.31 2001/06/27 00:30:38 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -573,13 +573,13 @@ services.UploadService.repository=.
 #
 # The maximum size of a request that will be processed.
 #
-services.UploadService.size.max=1048576
+services.UploadService.size.max=16777216
 
 #
 # The maximum size of a request that will have it's elements cached in
 # memory by TurbineUploadService class.
 #
-services.UploadService.size.threshold=0
+services.UploadService.size.threshold=1048576
 
 # -------------------------------------------------------------------
 # 
