- Added a new test on extension support by DOMConfigurator and other components.
- Added a toPriority(String) method to XPriority. This is required by DOMConfigurator

- Doc changes.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/xml/test/Makefile
+++ b/src/java/org/apache/log4j/xml/test/Makefile
@@ -2,7 +2,8 @@
 PKG_DIR :=org/apache/log4j/xml/test
 DEPTH   :=../../../../../../..
 JSOURCES:=DOMTest.java DisableOverrideTest.java \
-	SubClassTest.java\
+ SubClassTest.java\
+ XTest.java\
 
 #DisableTest.java \
 SUBDIRS :=
