a couple property changes in Turbine
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.31 2001/06/27 00:30:38 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.32 2001/06/29 21:45:10 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -157,7 +157,7 @@ template.error=Error.vm
 #
 # Default: Error
 
-screen.error=VelocityErrorScreen
+screen.error=Error
 
 # This is the screen that is displayed when the user's web page is in
 # an invalid state.
@@ -314,6 +314,7 @@ services.DatabaseService.classname=org.apache.turbine.services.db.TurbineDatabas
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 services.TemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
+#services.BSFService.classname=org.apache.turbine.services.bsf.TurbineBSFService
 
 # Turn on the appropriate template service.
 services.VelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
@@ -444,13 +445,20 @@ services.TemplateService.screen.cache.size=50
 # This determines whether the non-request tools are refreshed 
 # on each request (request tools aren't ever, because they're
 # instantiated for the request only anyway).
-services.PullService.tools.per.request.refresh=true
+services.PullService.toolsPerRequestRefresh=true
 
 # These are tools that are placed in the context by the service
 # These tools will be made available to all your
 # templates. You list the tools in the following way:
 #
-# tool.<scope>.<id> = <classname>
+# services.PullService.tool.<scope>.<id> = <classname>
+#
+# You can configure the tools in this way:
+# services.PullService.tool.<id>.<parameter> = <value>
+#
+# So if you find "global", "request", "session" or "persistent" as second
+# part, it is a configuration to put a tool into the toolbox, else it is a
+# tool specific configuration.
 #
 # <scope>      is the tool scope: global, request, session
 #              or persistent (see below for more details)
