latest TR.props sync'd with Turbine's Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.32 2001/06/29 21:45:10 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.33 2001/06/29 21:55:56 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -15,6 +15,13 @@
 # -------------------------------------------------------------------
 # We use Log4J for all Turbine logging and we embed the log4j
 # properties within our application configuration.
+#
+# NOTE:
+# The presence of ${webapp} in the logging configuration
+# is not a mistake. Internally the value of ${webapp}
+# is set so that you can use it with standard log4j
+# properties to get logs to appear in your
+# webapp space.
 # -------------------------------------------------------------------
 
 # This first category is required and the category
@@ -115,21 +122,6 @@ module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 # the default templates and screens are and session handling settings.
 # -------------------------------------------------------------------
 
-# Used to set the template homepage if you are using a template
-# layout.
-#
-# Default: /index.wm
-
-template.homepage=Index.vm
-
-# This is the default screen to show to people when they first access
-# the system.  Specify one of the template screens such as VelocityScreen
-# to use a template system.
-#
-# Default: Login
-
-screen.homepage=
-
 # This is the template that is shown on an incorrect login attempt. 
 # Setting this property will override any value of screen.login specfied
 # below.
@@ -138,12 +130,12 @@ screen.homepage=
 
 template.login=Login.vm
 
-# This is the page that is shown on an incorrect login attempt.  It is
-# referenced in the LoginUser action
+# Used to set the template homepage if you are using a template
+# layout.
 #
-# Default: Login
+# Default: /index.wm
 
-screen.login=Login
+template.homepage=Index.vm
 
 # This is the template that is used by the respective Template based 
 # ErrorScreen for displaying the error. If you are not using a Template based 
@@ -152,28 +144,6 @@ screen.login=Login
 # Default: /Error.wm
 
 template.error=Error.vm
-
-# This is the default error screen.
-#
-# Default: Error
-
-screen.error=Error
-
-# This is the screen that is displayed when the user's web page is in
-# an invalid state.
-#
-# Default: error.InvalidState
-
-screen.invalidstate=error.InvalidState
-
-# Set the default Doctype.  The default Doctype can be set by using
-# the single strings: Html40Strict, Html40Transitional, or
-# Html40Frameset.  Additionally the default can be supplied as two
-# strings separated by a comma giving the DTD and URI.
-#
-# Default: ignored if not set to some value.
-
-default.doctype=Html40Transitional
 
 # This is the default action to log a user in.
 # Default: LoginUser
@@ -201,6 +171,15 @@ action.sessionvalidator=sessionvalidator.TemplateSessionValidator
 # the individual users session.
 
 action.accesscontroller=AccessController
+
+# Set the default Doctype.  The default Doctype can be set by using
+# the single strings: Html40Strict, Html40Transitional, or
+# Html40Frameset.  Additionally the default can be supplied as two
+# strings separated by a comma giving the DTD and URI.
+#
+# Default: ignored if not set to some value.
+
+default.doctype=Html40Transitional
 
 # -------------------------------------------------------------------
 # 
@@ -306,7 +285,7 @@ services.LocalizationService.classname=org.apache.turbine.services.localization.
 services.MimeTypeService.classname=org.apache.turbine.services.mimetype.TurbineMimeTypeService
 services.GlobalCacheService.classname=org.apache.turbine.services.cache.TurbineGlobalCacheService
 services.SchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
-#services.XmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
+services.XmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.UniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.UploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
 services.SecurityService.classname=org.tigris.scarab.services.ScarabDBSecurityService
@@ -314,6 +293,7 @@ services.DatabaseService.classname=org.apache.turbine.services.db.TurbineDatabas
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 services.TemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
+#services.XSLTService.classname=org.apache.turbine.services.xslt.TurbineXSLTService
 #services.BSFService.classname=org.apache.turbine.services.bsf.TurbineBSFService
 
 # Turn on the appropriate template service.
@@ -421,6 +401,15 @@ services.AssemblerBrokerService.scheduledjob=org.apache.turbine.services.assembl
 
 # -------------------------------------------------------------------
 # 
+# B S F  S E R V I C E
+#
+# -------------------------------------------------------------------
+
+services.BSFService.scriptsDirectory = WEB-INF/scripts
+services.BSFService.defaultExtension = py
+
+# -------------------------------------------------------------------
+# 
 #  T E M P L A T E  S E R V I C E
 #
 # -------------------------------------------------------------------
@@ -453,6 +442,10 @@ services.PullService.toolsPerRequestRefresh=true
 #
 # services.PullService.tool.<scope>.<id> = <classname>
 #
+# <scope>      is the tool scope: global, request, session
+#              or persistent (see below for more details)
+# <id>         is the name of the tool in the context
+#
 # You can configure the tools in this way:
 # services.PullService.tool.<id>.<parameter> = <value>
 #
@@ -460,31 +453,31 @@ services.PullService.toolsPerRequestRefresh=true
 # part, it is a configuration to put a tool into the toolbox, else it is a
 # tool specific configuration.
 #
-# <scope>      is the tool scope: global, request, session
-#              or persistent (see below for more details)
-# <id>         is the name of the tool in the context
-#
 # For example:
 #
-# tool.global.ui    = org.apache.turbine.util.pull.UIManager
-# tool.global.mm    = org.apache.turbine.util.pull.MessageManager
-# tool.request.link = org.apache.turbine.util.template.TemplateLink
-# tool.request.page = org.apache.turbine.util.template.TemplatePageAttributes
+# services.PullService.tool.global.ui = org.apache.turbine.util.pull.UIManager
+# services.PullService.tool.global.mm = org.apache.turbine.util.pull.MessageManager
+# services.PullService.tool.request.link = org.apache.turbine.util.template.TemplateLink
+# services.PullService.tool.request.page = org.apache.turbine.util.template.TemplatePageAttributes
 #
-# (the next two examples specify mythical classes) 
+# Then:
 #
-# tool.session.basket = org.sample.tools.ShoppingBasket
-# tool.persistent.ui  = org.sample.tools.PersistentUIManager
-#
+# tool.ui.skin = default
+# 
+# configures the value of "skin" for the "ui" tool.
 #
 # Tools are accessible in all templates by the <id> given
 # to the tool. So for the above listings the UIManager would
 # be available as $ui, the MessageManager as $mm, the TemplateLink
 # as $link and the TemplatePageAttributes as $page.
 #
+# You should avoid using tool names called "global", "request",
+# "session" or "persistent" because of clashes with the possible Scopes.
+#
 # Scopes:
-#   global:    tool is instantiated once and that instance is available
-#              to all templates for all requests. Tool must be threadsafe.
+#
+#   global:     tool is instantiated once and that instance is available
+#               to all templates for all requests. Tool must be threadsafe.
 #
 #   request:    tool is instantiated once for each request (although the
 #               PoolService is used to recycle instances). Tool need not
@@ -705,7 +698,6 @@ services.SecurityService.secure.passwords=true
 
 services.SecurityService.secure.passwords.algorithm=SHA
 
-
 # -------------------------------------------------------------------
 # 
 #  X M L R P C  S E R V I C E
@@ -753,6 +745,38 @@ services.XmlRpcService.handler.file = org.apache.turbine.services.xmlrpc.util.Fi
 services.XmlRpcService.paranoid = false
 services.XmlRpcService.acceptClient = 192.168.1.*
 services.XmlRpcService.denyClient = 
+
+# Do we want a secure server
+
+services.XmlRpcService.secure.server = false
+
+# Secure server options
+
+services.XmlRpcService.secure.server.option.java.protocol.handler.pkgs = \
+    com.sun.net.ssl.internal.www.protocol
+
+services.XmlRpcService.secure.server.option.security.provider = \
+    com.sun.net.ssl.internal.ssl.Provider
+
+services.XmlRpcService.secure.server.option.security.protocol = TLS
+
+# You probably want to keep your key stores and trust stores
+# clear out of your webapp.
+
+services.XmlRpcService.secure.server.option.javax.net.ssl.keyStore = /tmp/keystore
+services.XmlRpcService.secure.server.option.javax.net.ssl.keyStoreType = jks
+services.XmlRpcService.secure.server.option.javax.net.ssl.keyStorePassword = password 
+services.XmlRpcService.secure.server.option.javax.net.ssl.trustStore = /tmp/truststore
+services.XmlRpcService.secure.server.option.javax.net.ssl.trustStoreType = jks
+services.XmlRpcService.secure.server.option.javax.net.ssl.trustStorePassword = password 
+
+services.XmlRpcService.secure.server.option.sun.ssl.keymanager.type = SunX509
+services.XmlRpcService.secure.server.option.sun.ssl.trust.manager.type = SunX509
+
+# These values should be set to 'all' for debugging purposes.
+
+services.XmlRpcService.secure.server.option.javax.net.debug = none
+services.XmlRpcService.secure.server.option.java.security.debug = none
 
 services.XmlRpcService.earlyInit = true
 
