- Added Kevin's CompositeRollingAppender
- Small changes to doc files.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -3,6 +3,7 @@ PKG_DIR :=org/apache/log4j
 DEPTH   :=../../../../..
 JSOURCES:=HTMLLayout.java\
 	DailyRollingFileAppender.java\
+	CompositeRollingAppender.java\
 	RollingFileAppender.java\
 	PropertyConfigurator.java\
 	PatternLayout.java\
