needs to be ScarabUserImplPeer now. Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.34 2001/07/05 00:04:37 jon Exp $
+# $Id: TurbineResources.properties,v 1.35 2001/07/06 17:33:37 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -664,7 +664,7 @@ services.SecurityService.user.class=org.tigris.scarab.om.ScarabUserImpl
 #
 # Defalut: org.apache.turbine.om.security.peer.TurbineUserPeer
 #
-services.SecurityService.userPeer.class=org.tigris.scarab.om.ScarabUserPeer
+services.SecurityService.userPeer.class=org.tigris.scarab.om.ScarabUserImplPeer
 
 #
 # This is the class that implements UserManager interface.
